gtk: ensure workspace switcher visibility

--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -1,2 +1,4 @@
 window.ssd * {margin: -99px} window, headerbar {border-radius: 0}
 headerbar, headerbar *, headerbar * * { min-height: 0; margin: 0; padding: 0; }
+.workspace-item { border-left: 1px solid #404040; border-right: 1px solid #404040; }
+.current-workspace { background-color: #262626 }
